# create-fast-api-react-app

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
template/: Dockerfile.backend  Makefile  docker-compose.yml  nginx.conf
template/client/src/: App.tsx
template/server/: __init__.py  app.py  config.py  models.py  pyproject.toml  routes.py
template/server/migrations/: env.py
