[project]
name = "{{{projectName}}}"
version = "0.0.1"
description = "{{{projectDescription}}}"
authors = [{name = "{{{author}}}"}]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "flask-sqlalchemy>=3.1.1",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
]