[project]
name = "{{{projectName}}}"
version = "0.0.1"
description = "{{{projectDescription}}}"
authors = [{name = "{{{author}}}"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "pydantic-settings>=2.4.0",
]